--- a/site-agence-immobili-re/contactagence.html
+++ b/site-agence-immobili-re/contactagence.html
@@ -23,9 +23,10 @@
     </nav>
     </div>
 
-
+ <div class="contactbg">
 <h2 class="subtitle"> Contact us </h2>   
  <!-------------Formulaire de contact------------>    
+</div>
     <div class="contact">
 
 
@@ -42,7 +43,7 @@
           <input type="text" id="lname" name="NomPrénom" placeholder="Please enter your Name" > <br>
           <input type="email" name="email" placeholder=" E-mail adresse " > <br>
           <input type="tel" id="phone" name="phone"  placeholder="Phone number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required> <br>
-          <textarea id="w3review" name="w3review" rows="6" cols="56" > Laissez nous un message </textarea> <br>
+          <textarea rows="6" cols="56" > Laissez nous un message </textarea> <br>
           <div class="envoyer">
            <input type="button" value=" envoyer" id="Envoyer" > 
           </div>
@@ -53,7 +54,7 @@
 
 
     </div>
-  </div>
+  
     <iframe  scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=400&amp;hl=en&amp;q=tunis+(Pioneer)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"   width="100%" height="300" frameborder="0"></iframe></div>
   </iframe><a href="https://www.maps.ie/route-planner.htm"> </a> 
       <footer>
