--- a/site-agence-immobili-re/rent.html
+++ b/site-agence-immobili-re/rent.html
@@ -90,39 +90,103 @@
 </main>
 <!------card product-->
 <section class="products">
-    <div class="flex">
     <div class="card2">
+
         <img src="image/fran-hogan-zhs_y6CLWco-unsplash.jpg" alt="house" style="width:100%">
+        <div class="contain-price">
+        <div class="price"> <i class="fas fa-dollar-sign"></i> 4000 TDN</div>
+        </div>
         <h4> Villa </h4>
 
-        <p class="price">4000 TDN</p>
          <p>  <i class="fa fa-map-marker" aria-hidden="true" >Tunis, Ennasr </i> </p>
-        <p><button>louer</button></p>
-      </div>
+
+        <div class="desc">
+         <div> <i class="fa fa-bed"></i> 4 </div>
+        <div> <i class="fa fa-ruler-combined"></i> 400 m2</div>
     </div>
-    <div class="card2">
-        <img src="image/fran-hogan-zhs_y6CLWco-unsplash.jpg" alt="house" style="width:100%">
+      </div>
+      <div class="card2">
+
+        <img src="image/patrick-perkins-3wylDrjxH-E-unsplash.jpg" alt="house" style="width:100%">
+        <div class="contain-price">
+        <div class="price"> <i class="fas fa-dollar-sign"></i> 5000 TDN</div>
+        </div>
         <h4> Villa </h4>
 
-        <p class="price">4000 TDN</p>
-         <p>  <i class="fa fa-map-marker" aria-hidden="true" >Tunis, Ennasr </i> </p>
-        <p><button>louer</button></p>
-      </div>
+         <p>  <i class="fa fa-map-marker" aria-hidden="true" >Hammamet </i> </p>
+
+        <div class="desc">
+         <div> <i class="fa fa-bed"></i> 4 </div>
+        <div> <i class="fa fa-ruler-combined"></i> 400 m2</div>
     </div>
-    <div class="card2">
-        <img src="image/fran-hogan-zhs_y6CLWco-unsplash.jpg" alt="house" style="width:100%">
+      </div>
+      <div class="card2">
+
+        <img src="image/tel4.jpg" alt="house" style="width:100%">
+        <div class="contain-price">
+        <div class="price"> <i class="fas fa-dollar-sign"></i> 4000 TDN</div>
+        </div>
         <h4> Villa </h4>
 
-        <p class="price">4000 TDN</p>
-         <p>  <i class="fa fa-map-marker" aria-hidden="true" >Tunis, Ennasr </i> </p>
-        <p><button>louer</button></p>
-      </div>
+         <p>  <i class="fa fa-map-marker" aria-hidden="true" >Tunis, Marsa</i> </p>
+
+        <div class="desc">
+         <div> <i class="fa fa-bed"></i> 4 </div>
+        <div> <i class="fa fa-ruler-combined"></i> 400 m2</div>
     </div>
-   
+      </div>
+      <div class="card2">
+
+        <img src="image/bg.jpg" alt="house" style="width:100%">
+        <div class="contain-price">
+        <div class="price"> <i class="fas fa-dollar-sign"></i> 4000 TDN</div>
+        </div>
+        <h4> Villa </h4>
+
+         <p>  <i class="fa fa-map-marker" aria-hidden="true" >Tunis, Ennasr </i> </p>
+
+        <div class="desc">
+         <div> <i class="fa fa-bed"></i> 4 </div>
+        <div> <i class="fa fa-ruler-combined"></i> 400 m2</div>
+    </div>
+      </div>
+      <div class="card2">
+
+        <img src="image/tel3.jpg" alt="house" style="width:100%">
+        <div class="contain-price">
+        <div class="price"> <i class="fas fa-dollar-sign"></i> 4000 TDN</div>
+        </div>
+        <h4> Villa </h4>
+
+         <p>  <i class="fa fa-map-marker" aria-hidden="true" >Tunis, Ennasr </i> </p>
+
+        <div class="desc">
+         <div> <i class="fa fa-bed"></i> 4 </div>
+        <div> <i class="fa fa-ruler-combined"></i> 400 m2</div>
+    </div>
+      </div>
+      <div class="card2">
+
+        <img src="image/tel4.jpg" alt="house" style="width:100%">
+        <div class="contain-price">
+        <div class="price"> <i class="fas fa-dollar-sign"></i> 4000 TDN</div>
+        </div>
+        <h4> Villa </h4>
+
+         <p>  <i class="fa fa-map-marker" aria-hidden="true" >Tunis, Ennasr </i> </p>
+
+        <div class="desc">
+         <div> <i class="fa fa-bed"></i> 4 </div>
+        <div> <i class="fa fa-ruler-combined"></i> 400 m2</div>
+    </div>
+      </div>
+
+
 </section>
+<!------fin card product-->
 
 
-
+<!----footer------>
 <footer>
     <div class="grid">
 <div class="description">
